prevent wrapping in submenu flyouts

--- a/src/css/components/_nav-base.scss
+++ b/src/css/components/_nav-base.scss
@@ -19,6 +19,7 @@ Base styles that apply to all menus
     text-decoration: none;
     color: white;
     padding: .6em 1em;
+    white-space: nowrap;
     &:hover,
     &:focus {
         background: #111;
